@@ -53,6 +53,9 @@ Bindings:
 * .net
 * java
 
+20141218
+* worked on Python 3 support
+
 20141216
 * worked on Python 3 support
 
